Fix website is not working properly on iOS Safari (#85)

--- a/docs/_sass/bulma.sass
+++ b/docs/_sass/bulma.sass
@@ -8,12 +8,14 @@ $family-sans-serif: system-ui,-apple-system,BlinkMacSystemFont,"Helvetica Neue",
 
 @import "./bulma/bulma.sass"
 
+html, body
+  min-height: 100%
+
 html
   font-size: 16px/1.5
   font-weight: 400
 
 body
-  min-height: 100vh
   display: flex
   flex-direction: column
 
@@ -50,3 +52,6 @@ small.price-end
 
 .download-btn img
   height: 50px
+
+.bento-button
+  cursor: pointer
